src/test/resources/testcases/valid/basic/const_fold.tc
// EXPECT_RETURN: 9
// Test constant folding
const int a = 3;
const int b = a * 2; // 6
int main() {
    return a + b; // 9
}
