src/test/resources/testcases/invalid/03_assign_const.tc
// Test assign to const
const int a = 5;
int main() {
    a = 10; // Should fail
    return a;
}
